--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -55,7 +55,10 @@
 }
 
 body {
-  background-color: #fff;
+  background-image: url("../../images/background1.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
   padding:50px;
   font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
