--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../../images/background2_better.jpg");
+  background-image: url("https://orenmazor.github.io/orenandshawna.us/images/background2_better.jpg");
   background-repeat: no-repeat;
   background-attachment: bottom;
   background-size: cover;
